readme.md edited

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                         <div class="input-group-append">
                             <button onclick="searchMeal()" type="button" class="btn btn-danger">Search</button>
                         </div>
+                        <div class="text-center">
+                            <img src="./images/cooking.gif" alt="" id="cooking" class="img-responsive w-50 mt-3">
+                        </div>
                     </div>
                 </form>
             </div>
